--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,16 +6,28 @@
     android:layout_height="match_parent"
     tools:context="bfortuner.androiddemo.CameraActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="62dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+    <ImageView
+    android:id="@+id/imageview"
+    android:layout_width="0dp"
+    android:layout_height="430dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@mipmap/ic_launcher" />
+
+    <Button
+        android:id="@+id/button_image"
+        android:layout_width="189dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/camera_msg"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:text="@string/button_takephoto"
+        android:onClick="takePicture"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageview" />
+
 </android.support.constraint.ConstraintLayout>
