--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -1,33 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:baselineAligned="false"
-    tools:context="bfortuner.androiddemo.CameraPreview">
-
-    <FrameLayout
-        android:id="@+id/camera_preview"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_preview_capture"
-        android:id="@+id/button"
-        android:layout_below="@+id/camera_preview"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/captured_image"
-        android:layout_below="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp"
-        android:contentDescription="@string/preview_desc" />
-
-</LinearLayout>
+    android:background="#000"
+    tools:context="bfortuner.androiddemo.CameraPreview" />
