--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -6,4 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context="bfortuner.androiddemo.CameraPreview" />
+    tools:context="bfortuner.androiddemo.CameraPreviewActivity" />
