--- a/app/src/main/res/layout/fragment_camera_preview.xml
+++ b/app/src/main/res/layout/fragment_camera_preview.xml
@@ -1,14 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="bfortuner.androiddemo.CameraPreviewFragment">
+    android:layout_height="match_parent">
 
 
     <bfortuner.androiddemo.AutoFitTextureView
         android:id="@+id/autoFitTextureView"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"/>
 
     <TextView
         android:id="@+id/textView2"
@@ -21,4 +21,4 @@
         android:textColor="@android:color/white"
         android:textSize="14sp"/>
 
-</FrameLayout>
+</RelativeLayout>
