--- a/app/src/main/res/layout/fragment_camera_preview.xml
+++ b/app/src/main/res/layout/fragment_camera_preview.xml
@@ -8,7 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"/>
 
     <TextView
         android:id="@+id/textView2"
